--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
+            <img class="card-img-top" height="225" src="Thumbnails/Latte.png">
+
+            <div class="card-body">
+              <p class="card-text">Moderne Latte is simplistic yet pleasant designed as nothing more than a basic landing page for a potential product and/or project.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="./Templates/Moderne-Latte/index.html">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </a>
+                </div>
+                <small class="text-muted">Last updated: Jul 27</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
             <img class="card-img-top" height="225" src="Thumbnails/Nimbus.png">
 
             <div class="card-body">
@@ -82,21 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">Webpage description will go here when the template is made. For now it is blank.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                </div>
-                <small class="text-muted">Last updated: </small>
-              </div>
-            </div>
-          </div>
-        </div>
+        
         <div class="col">
           <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
